--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@
                 <p class="font-bold text-xl">February</p>
                 <ul>
                     <li><a href="pages/feb-4-poulami.html" class="wwcode-link">Digital Wallet With Adding New Card functionality by Poulami Saha</a></li>
+                    <li><a href="pages/feb-10-poulami.html" class="wwcode-link">Testimonial Card by Poulami Saha</a></li>
                 </ul>
             </div>
         </div>
