--- a/src/pages/june_challenge.html
+++ b/src/pages/june_challenge.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Front End Friday</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /*Demo purposes only*/
-        body {
-            padding: 0 20px;
-        }
-    </style>
+    <title>November 18th</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Roboto&display=swap" rel="stylesheet">
+
 
     <style>
         a.wwcode-link {
@@ -675,115 +686,170 @@
             font-family: Arial, Helvetica, sans-serif
         }
     </style>
+
+    <style>
+        body {
+            background: linear-gradient(to left, white 50%,
+                    #b76fff 50%);
+
+        }
+
+        .font-anton {
+            font-family: 'Anton',
+                sans-serif;
+            font-weight: 400;
+        }
+
+        .font-roboto {
+            font-family: 'Roboto',
+                sans-serif;
+        }
+
+        li {
+            list-style: none;
+        }
+
+        .f-s {
+            font-size: 2rem;
+        }
+
+        .hamburger-menu {
+            margin: 2rem;
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: space-between;
+            height: 2.5rem;
+            width: 2.5rem;
+            cursor: pointer;
+        }
+
+        .bar-top,
+        .bar-middle,
+        .bar-bottom {
+            height: 5px;
+            background: white;
+            border-radius: 5px;
+            margin: 3px 0;
+            transform-origin: left;
+            transition: all 0.5s;
+        }
+
+        .hamburger-menu:hover .bar-top {
+            transform: rotate(45deg);
+        }
+
+        .hamburger-menu:hover .bar-middle {
+            transform: translateX(1rem);
+            opacity: 0;
+        }
+
+        .hamburger-menu:hover .bar-bottom {
+            transform: rotate(-45deg);
+        }
+
+        .navbar-item {
+            color: black !important;
+            float: right;
+        }
+
+        .nav-link {
+            color: black !important;
+
+        }
+
+        .navbar-right {
+            float: right;
+            margin: 4rem;
+        }
+
+        .link {
+            font-size: 1.4rem;
+            color: black;
+            text-decoration: none;
+            margin: 4rem;
+        }
+
+        .link:hover {
+            padding: 0.5rem;
+            border-radius: 1rem;
+            background-color: yellow;
+        }
+
+        .main-text {
+            color: #2f3e39;
+            font-size: 6rem;
+        }
+
+        @media screen and (max-width: 680px) {
+            .main-text {
+                color: #2f3e39;
+                font-size: 4rem;
+            }
+
+            .banana {
+                width: 300px;
+
+            }
+        }
+    </style>
+
+
+
 </head>
 
-<body class="container mx-auto px-4">
-    <h1 class="text-3xl font-bold my-3.5">Welcome to our Front End Fridays Repository!</h1>
-    <section>
 
-        <div class="columns-12 flex flex-col">
-            <div class="mb-4">
-                <p class="font-bold text-xl">November</p>
-                <ul>
-                    <li><a href="pages/november18.html" class="wwcode-link">Nov 18th - 2022 </a></li>
-                </ul>
+<body>
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class=" p-4">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+        </div>
+    </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <div class="hamburger-menu">
+                <div class="bar-top"></div>
+                <div class="bar-middle"></div>
+                <div class="bar-bottom"></div>
             </div>
-
-
-            <div>
-                <p class="font-bold text-xl">December</p>
-                <ul>
-                    <li><a href="pages/dec2.html" class="wwcode-link">Card-Timer by Poulami Saha</a></li>
-                    <li><a href="pages/dec9.html" class="wwcode-link">Boading pass by Mariya Harizanova</a></li>
-                    <li><a href="pages/dec13.html" class="wwcode-link">Card-Timer by Mariya Harizanova</a></li>
-                </ul>
+            <div class="">
+                <li class="text-white font-anton f-s"><strong>STEPS</strong></li>
             </div>
-            <br>
-            <div>
-                <p class="font-bold text-xl">January</p>
-                <ul>
-                    <li><a href="pages/january6.html" class="wwcode-link">Info Cards by Mariya Harizanova</a></li>
-                    <li><a href="pages/january18.html" class="wwcode-link">Info Card by Mariya Harizanova</a></li>
-                    <li><a href="pages/january-wallet.html" class="wwcode-link">Wallet by Mariya Harizanova</a></li>
-
-                    <li><a href="pages/jan6.html" class="wwcode-link">Banners by Poulami Saha</a></li>
-                    <li><a href="pages/jan6-luz.html" class="wwcode-link">Notifications by Luz De Leon</a></li>
-                    <li><a href="pages/jan13-poulami.html" class="wwcode-link">Profile by Poulami Saha</a></li>
-                </ul>
-            </div>
-            <div class="pt-4">
-                <p class="font-bold text-xl">February </p>
-                <ul>
-
-                    <li><a href="pages/calculator.html" class="wwcode-link">Calculator By Mariya Harizanova</a></li>
-
-                    <li><a href="pages/jan13-poulami.html" class="wwcode-link">Profile by Poulami Saha</a></li>
-                    <li><a href="pages/jan27-poulami.html" class="wwcode-link">Digital Wallet by Poulami Saha</a></li>
-                </ul>
-            </div>
-            <br>
-            <div>
-                <p class="font-bold text-xl">February</p>
-                <ul>
-                    <li><a href="pages/feb-4-poulami.html" class="wwcode-link">Digital Wallet With Adding New Card
-                            functionality by Poulami Saha</a></li>
-
-                </ul>
-            </div>
-            <br>
-            <div>
-                <p class="font-bold text-xl">March</p>
-                <ul>
-                    <li><a href="pages/march.html" class="wwcode-link">Recipe page by Mariya Harizanova
-                        </a></li>
-
-                </ul>
-            </div>
-            <div>
-                <p class="font-bold text-xl">March</p>
-                <ul>
-                    <li><a href="pages/mar-17-poulami.html" class="wwcode-link">E-Commerce Site by Poulami Saha</a></li>
-                    <li><a href="pages/mar-24-poulami.html" class="wwcode-link">Wellness App by Poulami Saha</a></li>
-                    <li><a href="pages/march-31-poulami.html" class="wwcode-link">WWC-Design by Poulami Saha</a></li>
-                </ul>
-            </div>
-            <div class="pb-5">
-                <p class="font-bold text-xl">April</p>
-                <ul>
-                    <li><a href="pages/april.html" class="wwcode-link">Women Who Code
-                            News by Mariya Harizanova</a></li>
-
-                    <li><a href="pages/april-15.html" class="wwcode-link">BitTransactions app by Mariya Harizanova</a>
-                    </li>
-                    <li><a href="pages/april-14-poulami.html" class="wwcode-link">Transactions by Poulami Saha</a></li>
-                    <li><a href="pages/april-21-poulami.html" class="wwcode-link">MyStore by Poulami Saha</a></li>
-                    <li><a href="pages/luz-april-14.html" class="wwcode-link">Transactions by Luz De Leon</a></li>
-                    <li><a href="pages/luz-april-21.html" class="wwcode-link">Drag & Drop by Luz De Leon</a></li>
-                </ul>
-            </div>
-            <div class="pb-5">
-                <p class="font-bold text-xl">May</p>
-                <ul>
-                    <li><a href="pages/may-file-upload-mariya.html" class="wwcode-link">Women Who Code
-                            File Upload by Mariya Harizanova</a></li>
-                    <li><a href="pages/my_coding_partner.html" class="wwcode-link">My Coding Partner by Mariya
-                            Harizanova</a></li>
-                </ul>
-
-            </div>
-            <div class="pb-5">
-                <p class="font-bold text-xl">June</p>
-                <ul>
-                    <li><a href="pages/june_challenge.html" class="wwcode-link">Women Who Code
-                            Shoes Upload by Mariya Harizanova</a></li>
-                    <li><a href="pages/june_challenge.html" class="wwcode-link">Shoes by Mariya
-                            Harizanova</a></li>
-                </ul>
-
+            <div class="topnav-right">
+                <a class="link font-roboto" href="#search">About</a>
+                <a class="link font-roboto" href="#about">Shop</a>
+                <a class="link font-roboto" href="#about">Cart</a>
             </div>
         </div>
+    </nav>
+    <div class="row mx-auto">
+        <div class="col-lg-12 pt-5 mt-5">
+            <h1 class="main-text font-anton text-center">
+                SHOES FOR EVERY DAY
+            </h1>
+        </div>
+        <div class="col-lg-2 text-center  col-md-12 col-12 mx-auto pt-5">
+            <img class="banana" src="../assets/mariya/banana.png">
+        </div>
+        <div class="col-lg-4 text-center col-md-12 col-12 pt-5">
+            <img src="../assets/mariya/shoes.png">
+        </div>
+    </div>
 
-    </section>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+
 </body>
 
 </html>
